tests/org.eclipse.php.core.tests/workspace/errors/php53/testTypeReferenceError9.pdtt
--TEST--
Bug 559657 - Validator warns about unresolved types when classes and namespaces have same name
--FILE--
<?php
namespace
{
    function FFI(\FFI\CData &$ptr)
    {
    }
}
namespace FFI
{
    final class CData
    {
    }

    \FFI();
}
--EXPECT--
